--- a/components.json
+++ b/components.json
@@ -14,8 +14,8 @@
     "components": "@/shared/components",
     "utils": "@/shared/lib/css",
     "ui": "@/shared/ui",
-    "lib": "@shared//lib",
-    "hooks": "@shared/hooks"
+    "lib": "@/shared//lib",
+    "hooks": "@/shared/hooks"
   },
   "iconLibrary": "lucide"
 }
