--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
@@ -32,7 +33,8 @@
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.4",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
