--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.522.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
