--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prettier": "prettier --write 'src/**/*{css,js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.1",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -28,6 +30,7 @@
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.522.0",
+    "motion": "^12.23.3",
     "nanoid": "^5.1.5",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
