--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write 'src/**/*{css,js,jsx,ts,tsx}'"
+    "prettier": "prettier --write 'src/**/*{css,js,jsx,ts,tsx}'",
+    "prisma:seed": "tsx prisma/seed.ts",
+    "prisma:studio": "npx prisma studio",
+    "prisma:push": "npx prisma db push",
+    "prisma:migrate": "npx prisma migrate dev",
+    "db:reset": "npx prisma migrate reset"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.1",
     "@hookform/resolvers": "^5.1.1",
+    "@prisma/client": "^6.11.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -36,6 +42,7 @@
     "nanoid": "^5.1.5",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "prisma": "^6.11.1",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
@@ -60,7 +67,9 @@
     "eslint-config-next": "15.3.4",
     "prettier": "^3.6.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
