--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cookie": "^1.0.2",
+    "cuid": "^3.0.0",
     "date-fns": "^4.1.0",
+    "jose": "^6.0.12",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.522.0",
     "motion": "^12.23.3",
