add message logic, docker, rabbit, remove right-message aside

--- a/package.json
+++ b/package.json
@@ -15,7 +15,15 @@
     "migrate:reset": "npx prisma migrate reset",
     "deploy": "npm run migrate:deploy && npm run generate",
     "generate": "prisma generate",
-     "log:project-stats": "tsx scripts/run-log-daily-project-stats.ts"
+    "log:project-stats": "tsx scripts/run-log-daily-project-stats.ts",
+    "redis:up": "docker-compose up -d",
+    "redis:down": "docker-compose down",
+    "docker:build": "docker-compose build",
+    "up": "docker-compose up -d",
+    "down": "docker-compose down",
+    "logs": "docker-compose logs -f",
+    "dev:docker": "docker-compose -f docker-compose.dev.yml up --build",
+    "dev:down": "docker-compose -f docker-compose.dev.yml down"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.1",
@@ -32,6 +40,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -44,6 +53,7 @@
     "cookie": "^1.0.2",
     "cuid": "^3.0.0",
     "date-fns": "^4.1.0",
+    "ioredis": "^5.7.0",
     "jose": "^6.0.12",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.522.0",
@@ -59,6 +69,8 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.4",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
